完成向Trickster法术片段传入参数和读取返回值